--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "license": "ISC",
   "scripts": {
     "watch": "parcel watch",
-    "build": "parcel build",
+    "build": "rm -rf dist && parcel build src/index.html --public-url ./ --detailed-report",
     "run": "parcel src/index.html",
     "serve": "rm -r .parcel-cache/ && parcel serve src/index.html"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
     "parcel": "latest",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "@parcel/packager-raw-url": "2.12.0",
+    "@parcel/transformer-webmanifest": "2.12.0",
+    "parcel-plugin-sw-cache": "^0.3.1",
+    "workbox-cli": "^7.1.0"
   },
   "dependencies": {
     "react": "18.3.1",
