--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "watch": "parcel watch",
     "build": "parcel build",
-    "run": "parcel src/index.html"
+    "run": "parcel src/index.html",
+    "serve": "rm -r .parcel-cache/ && parcel serve src/index.html"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
