--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "serve": "rm -r .parcel-cache/ && parcel serve src/index.html"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.12.0",
-    "parcel": "latest",
-    "process": "^0.11.10",
     "@parcel/packager-raw-url": "2.12.0",
-    "@parcel/transformer-webmanifest": "2.12.0",
+    "@parcel/transformer-sass": "^2.12.0",
+    "@parcel/transformer-webmanifest": "^2.12.0",
+    "parcel": "latest",
     "parcel-plugin-sw-cache": "^0.3.1",
+    "process": "^0.11.10",
     "workbox-cli": "^7.1.0"
   },
   "dependencies": {
