--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "ISC",
   "scripts": {
     "watch": "parcel watch",
-    "build": "rm -rf dist && parcel build src/index.html --public-url ./ --detailed-report",
-    "run": "parcel src/index.html",
-    "serve": "rm -r .parcel-cache/ && parcel serve src/index.html"
+    "build": "rm -rf dist && parcel build src/robots.txt src/favicon.svg src/index.html --public-url ./ --detailed-report",
+    "run": "parcel src/robots.txt src/favicon.svg src/index.html",
+    "serve": "rm -r .parcel-cache/ && parcel serve src/robots.txt src/favicon.svg src/index.html"
   },
   "devDependencies": {
     "@parcel/packager-raw-url": "2.12.0",
