--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "SOAK WWW",
   "description": "Find camps and events for SOAK 2024",
   "display": "standalone",
-  "background_color": "#fcd004",
-  "theme_color": "#fcd004",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "orientation": "portrait",
   "categories": ["creativity", "art", "festival"],
   "lang": "en",
