Trigger build and push to gh-pages on PR
* Triggers on PR for develop branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ permissions:
 
 on:
     workflow_dispatch:
-    push:
-        branches:
-            - develop
+    pull_request:
+      branches:
+        - develop
 
 jobs:
     build-deploy:
