--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@parcel/packager-raw-url": "^2.12.0",
     "@parcel/transformer-sass": "^2.12.0",
     "@parcel/transformer-webmanifest": "^2.12.0",
-    "parcel": "latest",
+    "msw": "^2.7.5",
+    "parcel": "^2.14.4",
     "parcel-plugin-sw-cache": "^0.3.1",
     "process": "^0.11.10",
     "svgo": "^3",
@@ -28,5 +29,10 @@
     "workbox-expiration": "^7.1.0",
     "workbox-routing": "^7.1.0",
     "workbox-strategies": "^7.1.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "dist"
+    ]
   }
 }
