Updates for pushing to GCP
* Update dockerfile to handle frontend build
* Fix mock and stateprovider to use correct backend data format
* Update package.json to set up mock provider on yarn run run

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,8 @@ jobs:
         - name: Build app
           run: |
             yarn add --dev parcel
-            yarn build
+            NODE_ENV=development yarn build
+            npx msw init dist/ --save
         - run: touch dist/.nojekyll
         - name: Deploy
           uses: peaceiris/actions-gh-pages@v4
