--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "workbox-cli": "^7.1.0"
   },
   "dependencies": {
+    "@newrelic/browser-agent": "^1.289.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sass": "^1.77.1",
