--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@parcel/packager-raw-url": "^2.12.0",
     "@parcel/transformer-sass": "^2.12.0",
     "@parcel/transformer-webmanifest": "^2.12.0",
+    "buffer": "^6.0.3",
     "msw": "^2.7.5",
     "parcel": "^2.14.4",
     "parcel-plugin-sw-cache": "^0.3.1",
