--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@newrelic/browser-agent": "^1.289.0",
     "react": "18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.3.1",
     "sass": "^1.77.1",
     "workbox-cacheable-response": "^7.1.0",
